responsiveness for footer section on mobile devices fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,3 @@
-/* #root {
-  /* max-width: 1280px; */
-/* margin: 0 auto; */
-/* padding: 2rem; */
-/* text-align: center; */
-/* } */
-:root {
-  font-size: 16px;
-}
 * {
   margin: 0;
   padding: 0;
