--- a/src/components/MinimumLivingCost/minimumlivingcost.module.css
+++ b/src/components/MinimumLivingCost/minimumlivingcost.module.css
@@ -50,3 +50,9 @@
   line-height: 36px;
  } 
 }
+@media screen and (max-width: 510px) {
+ .heading2{
+  font-size: 20px;
+  line-height: 25px;
+ } 
+}
